# deforum_next

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
a1111_extension/: README.md
deforum_core/: README.md  pyproject.toml
deforum_core/src/deforum_core/a1111/: profile.py
deforum_core/src/deforum_core/api/: app.py
deforum_core/src/deforum_core/camera/: __init__.py  bake.py  constraints.py  euler.py  math3d.py  modifiers.py  rig.py  shot_constraints.py  spline.py  splines.py
deforum_core/src/deforum_core/cli/: deforumx.py  exporters.py
deforum_core/src/deforum_core/schema/: models.py
deforum_core/src/deforum_core/timeline/: curves.py  evaluator.py
deforum_core/src/deforum_next_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
deforum_core/tests/: test_a1111_bundle_v6.py  test_a1111_export_v5.py  test_api.py  test_bake_camera_v13.py  test_bezier_spline_v6.py  test_constraints_v4.py  test_curves.py  test_cuts_v10.py  test_export_compact_v7.py  test_ffmpeg_scripts_v12.py  test_key_reduction_v14.py  test_modifiers.py  test_render_plan_v11.py  test_schema_v15.py  test_shot_export_v8.py  test_shot_export_v9.py  test_splines_v17.py
docs/: 00-overview.md  10-project-format.md  20-exporters.md  30-stacks-and-rigs.md  35-camera-paths.md  40-a1111-schedules.md  41-a1111-copy-paste-bundle.md  42-compact-export.md  43-editor-pro-controls.md  44-shot-export.md  45-viewport-gizmos.md  46-shot-overrides.md  47-easing.md  48-camera-cuts.md  49-shot-overrides-ui.md  50-roll-deg.md  51-render-plan.md  58-lens-dof.md  (+20 more)
(+31 files in other folders)
