[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deforum-next-core"
version = "0.6.0"
description = "Deforum Next core engine: timeline curves, camera rig, constraints/modifiers, FastAPI bridge, CLI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "numpy>=1.26",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "typer>=0.12",
  "rich>=13.7",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.8",
  "httpx>=0.27"
]

[project.scripts]
deforumx = "deforum_core.cli.deforumx:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "0.6.0"
warn_return_any = true
warn_unused_configs = true
